# ncdo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.ini
include/: config.h  hook.h  includes.h  term.h  ui.h  util.h
include/td/: task.h  todo.h
include/ui/: charcodes.h  component.h  data_list.h  editor.h  exit_popup.h  help.h  menu.h  task_list.h  textutil.h
src/: config.cpp  main.cpp  term.cpp
src/td/: task.cpp  todo.cpp
src/ui/: component.cpp  data_list.cpp  editor.cpp  exit_popup.cpp  help.cpp  menu.cpp  task_list.cpp  textutil.cpp
